--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>GithubRepos</title>
+  <title>Github Repos</title>
   <base href="/">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <div class="container">
+    <app-root>Loading...</app-root>
+  </div>
 </body>
 </html>
